--- a/style.css
+++ b/style.css
@@ -146,9 +146,10 @@ schedule, sponsors{
     justify-content: space-between;
     margin-top: 5%;
     width: 100%;
+    height: 100vh;
     padding: 8%;
     padding-bottom: 0;
-    background:  linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)),url(./shot-by-cerqueira-0o_GEzyargo-unsplash.jpg);
+    background:  linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)),url(https://images.unsplash.com/photo-1502134249126-9f3755a50d78?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8MTV8fHxlbnwwfHx8fHw%3D);
     background-position: center;
     background-size:cover;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
